--- a/rec_sys/sheet02.ipynb
+++ b/rec_sys/sheet02.ipynb
@@ -170,7 +170,7 @@
     "- $\\cos_\\text{dist}(A, C) = 1 - \\cos_\\text{sim}(A, C) \\approx 1 + 0.2 \\approx 1.2$\n",
     "- $\\cos_\\text{dist}(B, C) = 1 - \\cos_\\text{sim}(B, C) \\approx 1 + 0.9 \\approx 1.9$\n",
     "\n",
-    "TODO: Write comparison."
+    "By only considering the items rated by both users, the denominators become smaller (the norms are computed with less elements). Therefore, the similarities are bigger and the distances smaller."
    ]
   },
   {
