--- a/rec_sys/sheet03.ipynb
+++ b/rec_sys/sheet03.ipynb
@@ -13,6 +13,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "T0MW7woAmaSk"
    },
