--- a/rec_sys/sheet03.ipynb
+++ b/rec_sys/sheet03.ipynb
@@ -71,7 +71,33 @@
         "id": "UDfTe1Fz_WzX"
       },
       "source": [
-        "## Exercise 2"
+        "## Exercise 2\n",
+        "\n",
+        "a) **Task:** What is the purpose of automatic differentiation (AD) in computational mathematics, and how does it differ from numerical and symbolic differentiation? Describe at least one issue with numerical differentiation and one with symbolic differentiation that AD resolves.\n",
+        "\n",
+        "**Solution:** AD leverages the chain rule and partial computations to compute derivatives.\n",
+        "\n",
+        "One issue with numerical differentiation (ND) is the trade-off between rounding (small step size ) and truncation (larger step size). ND uses the limit definition to compute the derivative. Therefore, the denominator needs to approach 0, which leads to a rounding error (coming from floating point operations) and numerical instability. To improve the stability, the step size is increased, leading to the truncation error (an approximation of the derivative is computed).\n",
+        "\n",
+        "One issue with symbolic differentiation (SD) is the expression swell. SD applies the normal derivative rules to compute the derivative. Therefore, composite expressions can get arbitrarily large and complex.\n",
+        "\n",
+        "\n",
+        "b) **Task:** Explain the forward mode and reverse mode of AD. Describe the scenarios where each of these approaches is particularly efficient.\n",
+        "\n",
+        "**Solution:**\n",
+        "\n",
+        "Forward mode: Simultaneously evaluates the function and computes partial derivatives in a single pass. A different pass is needed for each input variable. Therefore, the forward mode is applied to functions with few input variables and many output ones.\n",
+        "\n",
+        "Reverse mode: Store intermediate values and compute the partial derivate by going backwards and applying the chain rule. The derivative is computed for all input variables. Therefore, the reverse mode is suite for functions with many input variables and few output ones.\n",
+        "\n",
+        "\n",
+        "c) **Task:** How does the time complexity of forward mode compare to reverse mode in terms of gradients for functions with multiple inputs and outputs?\n",
+        "\n",
+        "**Solution:** The forward mode depends on the number of inputs, while the reverse mode on the number of outputs.\n",
+        "\n",
+        "d) **Task:** In the reverse mode of AD, memory consumption can be a bottleneck. Discuss how checkpointing strategies can mitigate this issue and provide an example of when checkpointing would be essential.\n",
+        "\n",
+        "**Solution:** The idea of checkpointing is to save only certain intermediat values and recompute some based on the saved ones. One example is fixed checkpointing, which stores fixed nodes.\n"
       ]
     },
     {
