--- a/rec_sys/sheet03.ipynb
+++ b/rec_sys/sheet03.ipynb
@@ -6,7 +6,7 @@
         "id": "f_4PlFo8maSj"
       },
       "source": [
-        "# MMD 2024, Problem Sheet 3: ???\n",
+        "# MMD 2024, Problem Sheet 3\n",
         "\n",
         "Group: Daniela Fichiu, Aaron Maekel, Manuel Senger"
       ]
