--- a/rec_sys/sheet04.ipynb
+++ b/rec_sys/sheet04.ipynb
@@ -45,6 +45,48 @@
     "\n",
     "**Salt**: Adding random data to the input of a hash function to guarantee unique hashes for the same input. It prevents hash collisions and rainbow table attacks."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 3\n",
+    "\n",
+    "### a)\n",
+    "The Java Class HashMap extends the Class AbstractMap and implements the interface Map. It gets K - the type of keys maintained by the map - and V - the type of mapped values - as parameters. The class has a default constructor that creates an empty HashMap with the default initial capacity (16) and load factor (0.75). The capacity is the number of bucktes in the hash table and the load factor is a measure of how full the has table is allowed to get before its capacity is automatically increased. \n",
+    "\n",
+    "### b)\n",
+    "2. Adding a New <key, value> Pair to the Map\n",
+    "\n",
+    "When a new key-value pair is added, the process follows these steps:\n",
+    "\n",
+    "**Compute Hash:**\n",
+    "The hash code of the key is calculated using the key.hashCode() method, and then a secondary hashing function is applied to reduce collisions. This hashed value is used to determine the index of the bucket where the entry will be stored.\n",
+    "\n",
+    "**Locate the Bucket**:\n",
+    "    The index of the bucket is determined by applying the modulus operation to the hash value and the current number of buckets: index = hash % numberOfBuckets.\n",
+    "\n",
+    "**Check for Collisions**:\n",
+    "    No Collision: If the bucket is empty, a new Node with the key-value pair is created and placed at the corresponding index in the array.\n",
+    "    Collision: If the bucket already contains a Node, a collision has occurred. The new entry is added to the linked list (or balanced tree) at that bucket. If there is a list of nodes with the same hash value, the new Node is added at the head or end of the list (depending on the implementation)\n",
+    "\n",
+    "### c)\n",
+    "**Compute Hash:**\n",
+    "\n",
+    "The hash code of the search key is computed using the key.hashCode() method, and the index of the corresponding bucket is found using the formula index = hash % numberOfBuckets.\n",
+    "**\n",
+    "Locate the Bucket:**\n",
+    "\n",
+    "The bucket at the computed index is accessed.\n",
+    "\n",
+    "**Search for the Key:**\n",
+    "\n",
+    "If there is only one entry in the bucket (i.e., no collision), the key-value pair is returned directly.\n",
+    "If there are multiple entries (i.e., a collision), the map will iterate through the linked list (or balanced tree) of Node objects at that bucket.\n",
+    "    The map will compare the search key with the keys of the nodes in the list using the equals() method.\n",
+    "    If a matching key is found, the corresponding value is returned.\n",
+    "    If no matching key is found in the list, the method returns null.\n"
+   ]
   }
  ],
  "metadata": {
