--- a/rec_sys/sheet04.ipynb
+++ b/rec_sys/sheet04.ipynb
@@ -209,6 +209,55 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task:** \n",
+    "\n",
+    "Suppose we have a stream of tuples with the schema Grades(university, courseID,\n",
+    "studentID, grade). Assume universities are unique, but a courseID is unique only\n",
+    "within a university (i.e., different universities may have different courses with the same\n",
+    "ID, e.g., “IPI”) and likewise, studentIDs are unique only within a university (different\n",
+    "universities may assign the same ID to different students). Suppose we want to answer\n",
+    "certain queries approximately from a 1/20th sample of the data. For each of the queries\n",
+    "below, indicate how you would construct the sample. That is, tell what the key attributes\n",
+    "should be.\n",
+    "\n",
+    "a)\n",
+    "**Task:** \n",
+    "For each university, estimate the average number of students in a course.\n",
+    "\n",
+    "**Solution:**\n",
+    "our key is the course,and we sample 1/20th of all courses from each university and pick all the students there,thus building the mean from less courses, but the courses have precise data about the amount of students.\n",
+    "\n",
+    "b)\n",
+    "*Task:**\n",
+    "Estimate the fraction of students who have an average grade of 2.0 or better.\n",
+    "\n",
+    "**Solution:**\n",
+    "Our key is students\n",
+    "\n",
+    "c)\n",
+    "**Task:**\n",
+    "\n",
+    "Estimate the fraction of courses where at least half of the students got the grade 1.7\n",
+    "or better\n",
+    "\n",
+    "**Solution:**\n",
+    "\n",
+    "our key should be (uni,courses).\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
