--- a/rec_sys/sheet04.ipynb
+++ b/rec_sys/sheet04.ipynb
@@ -381,6 +381,26 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) **Solution:** Yes, the output is the expeced one, i.e., the words along\n",
+    "with their counts. The words are also split on white space.\n",
+    "\n",
+    "b) **Solution:** In this case, the sentence was sent 130 times instead of only once.\n",
+    "130 new rows were created, with approx. 20 rows processed\n",
+    "per second. A rows contais 10 characters, i.e., 10 bytes.\n",
+    "Therefore, the throughput is 200 bytes/second."
+   ]
   }
  ],
  "metadata": {
