started doing task 7

--- a/sheet05.ipynb
+++ b/sheet05.ipynb
@@ -359,7 +359,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercse 7\n"
+    "# Exercse 7\n",
+    "\n",
+    "**Task:**\n",
+    "\n",
+    " Download historical data of the audio platform Audioscrobbler2 that has been merged\n",
+    "with Last.fm in 2005. The file user_artist_data_small.txt is a file containing the\n",
+    "tab-separated relation “user X has listened to artist Y for Z many times”, represented\n",
+    "as “<userid> <artistid> <playcount>”. Write a Spark program using only DataFrames\n",
+    "APIs (i.e., no RDD or SQL APIs) to implement the following queries (submit your code\n",
+    "and the logs of your test/runs as a part of the solution).\n",
+    "\n",
+    "a)**Task:** \n",
+    "\n",
+    "Populate a utility matrix. Be sure to first replace bad artist IDs that are due to known\n",
+    "misspellings using the assignments in artist_alias_small.txt. Think about how\n",
+    "to store the matrix in a reasonable way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-------+\n",
+      "|    _c0|    _c1|\n",
+      "+-------+-------+\n",
+      "|1027859|1252408|\n",
+      "+-------+-------+\n",
+      "only showing top 1 row\n",
+      "\n",
+      "+-------+------------+\n",
+      "|    _c0|         _c1|\n",
+      "+-------+------------+\n",
+      "|1240105|André Visior|\n",
+      "+-------+------------+\n",
+      "only showing top 1 row\n",
+      "\n",
+      "+-------------------+\n",
+      "|                _c0|\n",
+      "+-------------------+\n",
+      "|1059637 1000010 238|\n",
+      "+-------------------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Set up the Spark session\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Create Spark session\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"TextFileToDataFrame\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "df1 = spark.read.option(\"delimiter\", \"\\t\").csv(\"artist_alias_small.txt\")\n",
+    "df2 = spark.read.option(\"delimiter\", \"\\t\").csv(\"artist_data_small.txt\")\n",
+    "df3 = spark.read.option(\"delimiter\", \"\\t\").csv(\"user_artist_data_small.txt\")\n",
+    "\n",
+    "df1.toDF(\"badID\", \"goodID\")\n",
+    "df2.toDF(\"artistID\", \"artistName\")\n",
+    "df3.toDF(\"userID\", \"artistID\",\"repeats\")\n",
+    "# Step 3: Show the DataFrames\n",
+    "df1.show(1)\n",
+    "df2.show(1)\n",
+    "df3.show(1)"
    ]
   }
  ],
