--- a/sheet05.ipynb
+++ b/sheet05.ipynb
@@ -335,7 +335,7 @@
     "\n",
     "**Solution:** \n",
     "\n",
-    "with growing v the estimator gets more accurate, as more samples are used. It converges to the exact result for v=n"
+    "with growing v the estimator gets more accurate and varies less, as more samples are used. It converges to the exact result for v=n"
    ]
   },
   {
@@ -387,24 +387,24 @@
      "output_type": "stream",
      "text": [
       "+-------+-------+\n",
-      "|    _c0|    _c1|\n",
+      "|  badID| goodID|\n",
       "+-------+-------+\n",
       "|1027859|1252408|\n",
       "+-------+-------+\n",
       "only showing top 1 row\n",
       "\n",
-      "+-------+------------+\n",
-      "|    _c0|         _c1|\n",
-      "+-------+------------+\n",
-      "|1240105|André Visior|\n",
-      "+-------+------------+\n",
+      "+--------+------------+\n",
+      "|artistID|  artistName|\n",
+      "+--------+------------+\n",
+      "| 1240105|André Visior|\n",
+      "+--------+------------+\n",
       "only showing top 1 row\n",
       "\n",
-      "+-------------------+\n",
-      "|                _c0|\n",
-      "+-------------------+\n",
-      "|1059637 1000010 238|\n",
-      "+-------------------+\n",
+      "+-------+--------+-----+\n",
+      "| userID|artistID|value|\n",
+      "+-------+--------+-----+\n",
+      "|1059637| 1000010|  238|\n",
+      "+-------+--------+-----+\n",
       "only showing top 1 row\n",
       "\n"
      ]
@@ -419,18 +419,23 @@
     "    .appName(\"TextFileToDataFrame\") \\\n",
     "    .getOrCreate()\n",
     "\n",
-    "df1 = spark.read.option(\"delimiter\", \"\\t\").csv(\"artist_alias_small.txt\")\n",
-    "df2 = spark.read.option(\"delimiter\", \"\\t\").csv(\"artist_data_small.txt\")\n",
-    "df3 = spark.read.option(\"delimiter\", \"\\t\").csv(\"user_artist_data_small.txt\")\n",
+    "df_alias = spark.read.option(\"delimiter\", \"\\t\").csv(\"artist_alias_small.txt\")\n",
+    "df_artist = spark.read.option(\"delimiter\", \"\\t\").csv(\"artist_data_small.txt\")\n",
+    "df_matrix = spark.read.option(\"delimiter\", \" \").csv(\"user_artist_data_small.txt\")\n",
     "\n",
-    "df1.toDF(\"badID\", \"goodID\")\n",
-    "df2.toDF(\"artistID\", \"artistName\")\n",
-    "df3.toDF(\"userID\", \"artistID\",\"repeats\")\n",
+    "df_alias = df_alias.toDF(\"badID\", \"goodID\")\n",
+    "df_artist = df_artist.toDF(\"artistID\", \"artistName\")\n",
+    "df_matrix = df_matrix.toDF(\"userID\", \"artistID\",\"value\")\n",
     "# Step 3: Show the DataFrames\n",
-    "df1.show(1)\n",
-    "df2.show(1)\n",
-    "df3.show(1)"
+    "df_alias.show(1)\n",
+    "df_artist.show(1)\n",
+    "df_matrix.show(1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
