--- a/sheet06.ipynb
+++ b/sheet06.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,8 @@
      "output_type": "stream",
      "text": [
       "[   313783875    407854733    422966171 ... 999983729780 999998372978\n",
-      " 999999837297]\n"
+      " 999999837297]\n",
+      "Done\n"
      ]
     }
    ],
@@ -499,7 +500,13 @@
     "    \n",
     "shingles = get_shingles_dec(txt,12)\n",
     "\n",
-    "print(shingles)\n"
+    "print(shingles)\n",
+    "\n",
+    "with open(r'pi_shingles.txt', 'w') as fp:\n",
+    "    for item in shingles:\n",
+    "        # write each item on a new line\n",
+    "        fp.write(\"%s\\n\" % item)\n",
+    "    print('Done')\n"
    ]
   },
   {
@@ -525,39 +532,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.e+15 1.e+15 1.e+15 1.e+15 1.e+15]\n",
-      "[1. 1. 1. 1. 1.]\n"
+      "Signature: [2.49166640e+07 1.04714586e+08 1.81477250e+07 3.18072120e+07\n",
+      " 2.58758930e+07]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import random\n",
-    "N = 5\n",
+    "N = 10**12  \n",
+    "#print(\"N:\",N)\n",
     "\n",
-    "A = [37, random.getrandbits(40), random.getrandbits(40), random.getrandbits(40), random.getrandbits(40)]\n",
-    "B = [126, random.getrandbits(40),random.getrandbits(40), random.getrandbits(40), random.getrandbits(40)]\n",
+    "A = np.array([37, random.getrandbits(40), random.getrandbits(40), random.getrandbits(40), random.getrandbits(40)], dtype=np.longdouble)\n",
+    "B = np.array([126, random.getrandbits(40),random.getrandbits(40), random.getrandbits(40), random.getrandbits(40)], dtype=np.longdouble)\n",
     "P = (10*np.ones(5))**15 + np.array([223,37, 91, 159, 187])\n",
     "\n",
-    "arr = np.ones(5)*100\n",
-    "for i in range(len(shingles)):\n",
+    "def h(x,a=37,b=126,p=(10**15 + 223)):\n",
+    "    #print(\"a:\",a)\n",
+    "    #print(\"b:\",b)\n",
+    "    #print(\"X:\",x)\n",
+    "    #print(\"ax+b:\" ,(a*x)+b)\n",
+    "    #print(\"mod p\",np.mod((a*x+b) , p))\n",
+    "    #print(\"mod N\",np.mod(np.mod(a*x+b , p) , N))\n",
+    "    return np.mod(np.mod(a*x+b,p), N) + 1\n",
+    "\n",
+    "arr = np.ones(5)*float(\"inf\")\n",
+    "for i in   range(len(shingles)):\n",
     "    for j in range(5):\n",
     "        res= h(shingles[i], A[j],B[j],P[j])\n",
     "        if res < arr[j]:\n",
     "            arr[j] = res \n",
-    "print(arr)    \n",
-    "\n",
-    "\n",
-    "\n",
-    "def h(x,a=37,b=126,p=(10**15 + 223)):\n",
-    "    return (((a*x+b) % p) % N) + 1\n"
+    "arr.astype(np.int64)\n",
+    "       \n",
+    "print(\"Signature:\" ,arr)    \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to avoid integer overflows we used np.longdouble"
    ]
   }
  ],
